syntax = "proto3";

package holms.types.booking.pricing;
option csharp_namespace = "HOLMS.Types.Booking.Pricing";
option go_package = "booking/pricing";

import "primitive/pb_inclusive_opsdate_range.proto";
import "booking/indicators/reservation_indicator.proto";
import "supply/qualification_indicator.proto";
import "supply/room_types/room_type_indicator.proto";

message ReservationPriceEstimateRequest {
	bool reservation_exists = 1;
	.holms.types.primitive.PbInclusiveOpsdateRange date_range = 2;
	.holms.types.booking.indicators.ReservationIndicator reservation = 3;
	holms.types.supply.room_types.RoomTypeIndicator room_type = 4;
	.holms.types.supply.QualificationIndicator q = 5;
	bool tax_exempt = 6;
	int32 adult_guest_count = 7;
}
